+ Fixed edge label update on alignment change
+ Fixed self-looped edges handling in GraphArea::GenerateEdgesForVertex() method
+ Fixed bugs with edge routing calculation in some cases
+ Fixed: Graph-Area LogicCoreProperty was registered using GraphAreaBase which could cause a problem (thanks to Paul Mandalka)
+ Fixed visual properties recovery terminating template values 
+ Implemented some properties as dependencies
+ Implemented EdgeControl::IsSelfLooped property as read-only dependency property.
+ Reworked EdgeLabelControl inner logic. Should now be more flexible and performance efficient.
+ Reworked main objects hierarchy to use more interfaces for loosened conditions
+ Some code refactoring. Minor performance improvements.

RELEASE 2.0.1
+ Added GraphArea::AddCustomChildControl() and GraphArea::RemoveCustomChildControl() methods to make the possibility to add any custom controls that are not vertex or edge.
+ Added ZoomControl::ToContentRectangle() method which translates screen rectangle coordinates to content rectangle coordinates
+ Added correct endpoints rendering for parallel edges on a rectangular vertex shape (thanks ro bleibold)
+ Added some hooks for ZoomControl to notify Presenter::RenderTransform on scale/translation changes. Now bindings to that property are correctly refreshed.
+ Added additional handling of custom objects in GraphArea (eg. clearing)
+ Added dependency property for GraphArea::LogicCore
+ Added new property GraphArea::EnableVisualPropsRecovery. Gets or sets if visual properties such as edge dash style or vertex shape should be automaticaly reapplied to visuals when graph is regenerated.
	Turning this off can save a bit of performance if you don't use custom values.
+ Added new property GraphArea::EnableVisualPropsApply. Gets or sets if visual properties such as edge dash style or vertex shape should be automaticaly applied to newly added visuals which are added using AddVertex() or AddEdge() or similar methods.