@@ -108,3 +108,4 @@ Backup*/
 UpgradeLog*.XML
 /Nuget/*.nupkg
 *.suo
+GraphX v2.v11.suo
